--- a/views/includes/header.pug
+++ b/views/includes/header.pug
@@ -7,11 +7,11 @@
     .container-fluid.bg-dark.px-0
         .row.gx-0
             .col-lg-3.bg-dark.d-none.d-lg-block
-                a.navbar-brand.w-100.h-100.m-0.p-0.d-flex.align-items-center.justify-content-center(href='index.html')
+                a.navbar-brand.w-100.h-100.m-0.p-0.d-flex.align-items-center.justify-content-center(href='/')
                     h1.m-0.text-primary.text-uppercase Hotelier
             .col-lg-9
                 nav.navbar.navbar-expand-lg.bg-dark.navbar-dark.p-3.p-lg-0
-                    a.navbar-brand.d-block.d-lg-none(href='index.html')
+                    a.navbar-brand.d-block.d-lg-none(href='/')
                         h1.m-0.text-primary.text-uppercase Hotelier
                     button.navbar-toggler(type='button' data-bs-toggle='collapse' data-bs-target='#navbarCollapse')
                         span.navbar-toggler-icon
@@ -19,16 +19,16 @@
                         .navbar-nav.mr-auto.py-0
                             a.nav-item.nav-link.active(href='/') Home
                             a.nav-item.nav-link(href='rooms') Rooms
+                            a.nav-item.nav-link(href='about') About
+                            a.nav-item.nav-link(href='contact') Contact
                             if !user
                                 a.nav-item.nav-link(href='login') Login
                                 a.nav-item.nav-link(href='register') Register
-                            a.nav-item.nav-link(href='about') About
-                            a.nav-item.nav-link(href='contact') Contact
                     if user
                         .text-center
                             a(href="/userDashboard") 
                                 p.text-white.me-5.mt-3.mb-0 Hesabım
                                 p.text-white.me-5 #{user.username}
                         .text-center
-                            a(href="") 
+                            a(href="logout") 
                                 p.text-white.me-5.mt-3 Çıkış Yap
