--- a/views/rooms.pug
+++ b/views/rooms.pug
@@ -64,7 +64,7 @@ block content
                     .d-flex.mb-3
                       small.border-end.me-3.pe-3
                         i.fa.fa-bed.text-primary.me-2
-                        | 3 Beddsds
+                        | #{room.bed} Bedds
                       small.border-end.me-3.pe-3
                         i.fa.fa-bath.text-primary.me-2
                         | 2 Bath
